--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -1,9 +1,14 @@
-<h2>Gerenciamento de Projetos</h2>
+<div id="MainHeader">
+  <h1>Panorama</h1>
+</div>
+<div class="Area">
+  <p>Tela principal do sistema de gerenciamento de contratos</p> 
+  <ul>
+    <li><a href="/projects">Projetos</a></li>
+    <li><a href="/register/contact">Contatos</a></li>
+    <li><a href="/register/institution">Instituições</a></li>
+  </ul>
+</div>
 
-<p>Tela principal do sistema de gerenciamento de contratos</p> 
-<br/>
-<a href="/projects">Projetos</a><br/>
-<a href="/register/contact/list">Contatos</a><br/>
-<a href="/register/institution/list">Instituições</a><br/>
 
 
